<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EstadisticaCrecimiento"
    android:background="@drawable/fondopantallas">

    <ImageView
        android:id="@+id/imgV_EstCr_enca"
        android:layout_width="412dp"
        android:layout_height="92dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/sencabezado_est_creci"
        app:layout_constraintBottom_toTopOf="@+id/txtV_EstCr_cant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btn_home"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="#324807"
        android:contentDescription="@string/Imbtn_descriptionhome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/home2" />

    <TextView
        android:id="@+id/txtV_EstCr_cant"
        android:layout_width="314dp"
        android:layout_height="26dp"
        android:layout_weight="1"
        android:text="Tabla de crecimiento"
        android:textAlignment="center"
        android:textColor="#743B1E"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134" />

    <TableLayout
        android:id="@+id/tab_estCr_CantCreci"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:layout_marginTop="130dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_marginLeft="30dp"
                android:background="#EEEEEE"
                android:padding="10dp"
                android:text="Semana"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:layout_marginEnd="30dp"
                android:background="#EEEEEE"
                android:padding="10dp"
                android:text="Cantidad (cm)"
                android:textAlignment="center"
                android:textStyle="bold" />

        </TableRow>

    </TableLayout>


    <TextView
        android:layout_width="314dp"
        android:layout_height="26dp"
        android:layout_weight="1"
        android:text="Cantidad total de centímetros"
        android:textAlignment="center"
        android:textColor="#743B1E"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402" />

    <TextView
        android:id="@+id/txtV_EstCr_CantCreci"
        android:layout_width="158dp"
        android:layout_height="33dp"
        android:layout_weight="1"
        android:background="#6D9422"
        android:hint="cm"
        android:textAlignment="center"
        android:textColor="#FEFEFE"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="229dp"
        android:layout_height="44dp"
        android:layout_weight="1"
        android:text="Histórico de crecimiento
        Galería de fotos"
        android:textAlignment="center"
        android:textColor="#743B1E"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />

    <ImageView
        android:layout_width="334dp"
        android:layout_height="180dp"
        android:background="@drawable/shistorico_crecimiento"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.745" />

    <TextView
        android:layout_width="314dp"
        android:layout_height="26dp"
        android:layout_weight="1"
        android:text="Próxima fecha para medir crecimiento"
        android:textAlignment="center"
        android:textColor="#743B1E"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.855" />

    <TextView
        android:id="@+id/txtV_EstCr_FechaCreci"
        android:layout_width="284dp"
        android:layout_height="24dp"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:hint="Fecha aproximada"
        android:textAlignment="center"
        android:textColor="#FEFEFE"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.909" />

    <Button
        android:id="@+id/categorias"
        android:layout_width="188dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#324807"
        android:text="@string/btn_categorias"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tips"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.992" />

    <Button
        android:id="@+id/tips"
        android:layout_width="188dp"
        android:layout_height="48dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#324807"
        android:text="@string/btn_tips"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.992" />


</androidx.constraintlayout.widget.ConstraintLayout>